--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header>
     <div class="nav">
         <div class="logo">
-           <a href="https://en.wikipedia.org/wiki/Agriculture"> <img src="assets/lo.png" alt="Military of India"  ></a>
+           <a href="https://en.wikipedia.org/wiki/Agriculture"> <img src="assets/lo.png" alt="Wikipedia Agri"  ></a>
         </div>
             <ul class="nav-links">
                 
