--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   <h1 class="com-head" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="300">Services</h1>
   <div class="com-container">
 <div class="com-container-1" data-aos="zoom-out" data-aos-duration="1000" data-aos-delay="300">
-  <h1>More Services</h1>
+  <h1>Weather</h1>
       <br>
       <a href="weather.html"><img class="animate__animated animate__pulse animate__slow animate__delay animate__infinite" src="assets/weather.jpg" alt="weather"></a>
       <br><br>
@@ -73,13 +73,8 @@
 </div>
 </div>
 </section>
-  <!--Console-->
-  <section id="rate">
-    <h1>RATE</h1>
-
-  </section>
     
-    <!--victory section-->
+ <!--victory section-->
     <section id="victory">
     
     <div class="container">
@@ -87,42 +82,42 @@
         <div class="row">
             <div data-aos="fade-down-right" data-aos-duration="1000"   class="column">
               <div class="content">
-                <a href="rice.html"><img src="assets/v1.jpg" alt="Kashmir War" style="width:100%"></a>
+                <a href="rice.html"><img src="assets/v1.jpg" alt="rice" style="width:100%"></a>
                 <h3>Paddy Crops</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis quisquam itaque placeat iste voluptates assumenda non. Magnam, quo exercitationem ipsam nisi accusantium provident voluptatibus, blanditiis nam minima deserunt eum ab.</p>
               </div>
             </div>
             <div data-aos="fade-up" data-aos-duration="1000"   class="column">
               <div class="content">
-              <a href="wheat.html"><img src="assets/v2.jpg" alt="Indo-china War" style="width:100%"></a>
+              <a href="wheat.html"><img src="assets/v2.jpg" alt="wheat" style="width:100%"></a>
                 <h3>Wheat Crops</h3>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque, corrupti ut dignissimos impedit ullam hic rem eveniet quae, odit reprehenderit deleniti dolorum? Maiores officia maxime, modi consequatur ab dolorum officiis.</p>
               </div>
             </div>
             <div data-aos="fade-up-right" data-aos-duration="1000"  class="column">
               <div class="content">
-              <a href="sugar.html"><img src="assets/v3.jpg" alt="Kargil War" style="width: 100%;"></a>
+              <a href="sugar.html"><img src="assets/v3.jpg" alt="sugar" style="width: 100%;"></a>
                 <h3>Sugar Cane</h3>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Id eum facilis dolor, rem cumque ex neque quo expedita ipsum harum libero consequatur quibusdam, voluptate explicabo a quas! Eos, hic laudantium?</p>
               </div>
             </div>
             <div data-aos="fade-down-right" data-aos-duration="1000"   class="column">
                 <div class="content">
-                  <a href="maize.html"><img src="assets/v4.jpg" alt="Kashmir War" style="width:100%"></a>
+                  <a href="maize.html"><img src="assets/v4.jpg" alt="maize" style="width:100%"></a>
                   <h3>Maize</h3>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis quisquam itaque placeat iste voluptates assumenda non. Magnam, quo exercitationem ipsam nisi accusantium provident voluptatibus, blanditiis nam minima deserunt eum ab.</p>
                 </div>
               </div>
               <div data-aos="fade-up" data-aos-duration="1000"   class="column">
                 <div class="content">
-                <a href="ground.html"><img src="assets/v5.jpg" alt="Indo-china War" style="width:100%"></a>
+                <a href="ground.html"><img src="assets/v5.jpg" alt="ground" style="width:100%"></a>
                   <h3>Groundnut</h3>
                   <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque, corrupti ut dignissimos impedit ullam hic rem eveniet quae, odit reprehenderit deleniti dolorum? Maiores officia maxime, modi consequatur ab dolorum officiis.</p>
                 </div>
               </div>
               <div data-aos="fade-up-right" data-aos-duration="1000"  class="column">
                 <div class="content">
-                <a href="Pototo.html"><img src="assets/v6.jpg" alt="Kargil War" style="width: 100%;"></a>
+                <a href="pototo.html"><img src="assets/v6.jpg" alt="potato" style="width: 100%;"></a>
                   <h3>potato</h3>
                   <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Id eum facilis dolor, rem cumque ex neque quo expedita ipsum harum libero consequatur quibusdam, voluptate explicabo a quas! Eos, hic laudantium?</p>
                 </div>
@@ -140,7 +135,7 @@
       <div class="flag" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="300">
           <div class="fl">
           <div class="flag-img">
-              <img src="assets/russia.png" alt="russia">
+              <img src="assets/russia.png" alt="backbone">
           </div>
           <div class="flag-content" >
              <h3>Backbone</h3>
@@ -149,16 +144,17 @@
       </div>
       <div class="fl" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="300">
           <div class="flag-img">
-              <img src="assets/usa.jpg" alt="russia">
+              <img src="assets/usa.jpg" alt="Cleanindia">
           </div>
           <div class="flag-content">
-              <h3>CLean India</h3>
+              <h3>Clean India</h3>
               <p>Agricultural pollution refers to biotic and abiotic byproducts of farming practices that result in contamination or degradation of the environment and surrounding ecosystems, and/or cause injury to humans and their economic interests</p>
           </div>
           </div>
           <div class="fl" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="300">
           <div class="flag-img">
-              <img src="assets/france.jpg" alt="russia">
+              <img src="assets/france.jpg" alt="plant
+">
           </div>
           <div class="flag-content">
               <h3>Plantation</h3>
@@ -167,7 +163,7 @@
           </div>
           <div class="fl" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="300">
           <div class="flag-img">
-              <img src="assets/uk.jpg" alt="russia">
+              <img src="assets/uk.jpg" alt="food">
           </div>
           <div class="flag-content">
               <h3>Food</h3>
